# beer-run-jpn

./: .gitignore  GEMINI.md  LICENSE  README.md  auth.py  database.py  main.py  models.py  pyproject.toml  repository_rules.md  schemas.py
data/: drinks.json  wrapped.json
scripts/: build_wrapped_data.py  manage_users.py  setup_db.py
static/css/: auth.css  style.css  wrapped.css
static/js/: app.js  wrapped.js
static/js/modules/: api.js  auth.js  map.js  ui.js
templates/: index.html  wrapped.html
tests/: conftest.py  test_auth.py  test_main.py  test_wrapped.py
